[package]
name = "ikigai-xslt"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Brian Sletten <brian.sletten@gmail.com>"]
description = "XSLT transformation as an ikigai resource (urn:xslt:transform) — style arbitrary XML/RDF-XML with a stylesheet, both as cacheable resource references. Pure-Rust (xrust), wasm-ready."
repository = "https://github.com/ikigai-rs/ikigai-xslt"
homepage = "https://github.com/ikigai-rs/ikigai-xslt"
keywords = ["ikigai", "roc", "xslt", "xml", "transform"]

# rlib for normal linking (the CLI, the uds examples); cdylib so `--features module` on
# wasm32 builds this library *as its own* lazy-loadable module artifact (ikigai_xslt.wasm).
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ikigai-core = "0.1.22"
async-trait = "0.1"
xrust = "2.1.0"

# The `module` feature turns this library into a standalone dynamically-loadable WASM
# module via `ikigai_module::wasm_module!` — so a host can lazy-load `ikigai_xslt.wasm` and
# resolve `urn:xslt:transform` against it. These deps are optional and behind the feature,
# so a normal (native/linked) consumer of the library never pulls wasm-bindgen et al.
[dependencies.ikigai-module]
version = "0.1.6"
optional = true
[dependencies.wasm-bindgen]
version = "=0.2.108"
optional = true
[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true
[dependencies.js-sys]
version = "0.3"
optional = true
[dependencies.futures]
version = "0.3"
optional = true
[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[features]
# Build this library as its own lazy-loadable WASM module:
#   cargo build --release --lib --features module --target wasm32-unknown-unknown
module = [
    "dep:ikigai-module",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:futures",
    "dep:console_error_panic_hook",
]

[dev-dependencies]
futures = "0.3"
# For the `uds-server` / `uds-client` examples: run this XSLT space as a standalone
# out-of-process module behind a Unix socket. A dev-dependency, so it never enters the
# published library's dependency graph.
ikigai-module = "0.1.6"
